--- a/Term2UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Term2UE/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -80,7 +80,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -135,6 +135,8 @@ CurrentPosGridSize=0
 CurrentRotGridSize=0
 CurrentScalingGridSize=6
 CurrentRotGridMode=GridMode_DivisionsOf360
+CameraSpeed=1
+CameraSpeedScalar=123.243446
 
 [DetailCategories]
 BP_Rifle_C.TransformCommon=True
@@ -587,8 +589,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/FirstPerson/Maps/FirstPersonMap.FirstPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=169.000 Y=112.000
-WindowSize=X=1288.000 Y=728.000
+ScreenPosition=X=168.667 Y=112.000
+WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -605,7 +607,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../3unique/Uni/New Repository/UE-Home/Term2UE/Content/FirstPerson/Maps
+UNR=../../../../../../Users/22498912/OneDrive - MMU/Documents/GitHub/HOME CLONE/UE-Home/Term2UE/Content/FirstPerson/Maps
 BRUSH=../../../../../../Users/22498912/OneDrive - MMU/Documents/Unreal Projects/Term2UE/Content/
 FBX=../../../../../../Users/22498912/OneDrive - MMU/Documents/Unreal Projects/Term2UE/Content/
 FBXAnim=../../../../../../Users/22498912/OneDrive - MMU/Documents/Unreal Projects/Term2UE/Content/
@@ -1524,8 +1526,8 @@ WorldBrowser.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/Users/Alex/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/Users/Alex/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -1581,6 +1583,8 @@ AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
